added scrubbable depth select; fixed several manip bugs

--- a/client/main.html
+++ b/client/main.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="css/mathquill.css">
   <link rel="stylesheet" href="css/qunit-2.0.0.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/verdict.css">
 
 	 <style type="text/css">
 	.sortable-placeholder {
