Added redux; made history work

--- a/client/main.html
+++ b/client/main.html
@@ -58,8 +58,9 @@
 
 <script>
 //GLOBAL VARIABLES
-var h_eq_shift=0,
-  v_eq_shift=0,
+var kek,
+// h_eq_shift=0,
+  // v_eq_shift=0,
   // equals_position = {left: 0, top: 100},
   // manip = "term",
   // depth = 1,
@@ -72,9 +73,9 @@ var h_eq_shift=0,
   // $selected = $(),
   // selected_nodes = [],
   // selected_text = "",
-  math_str = [],
+  // math_str = [],
   //for recording
-  current_index = 0,
+  // current_index = 0,
   selected_nodes_id_rec = [],
   math_str_rec = [],
   recording = false,
@@ -85,7 +86,7 @@ var h_eq_shift=0,
   equations = [];
 
   // var math_str_el;
-  var mathquill;
+  // var mathquill;
 </script>
 
 </body>
