added multi-equation support

--- a/client/main.html
+++ b/client/main.html
@@ -58,7 +58,7 @@
 
 <script>
 //GLOBAL VARIABLES
-var kek,
+var step_duration = 700,
 // h_eq_shift=0,
   // v_eq_shift=0,
   // equals_position = {left: 0, top: 100},
@@ -67,7 +67,6 @@ var kek,
   // multi_select = false,
   // var_select = false,
   // replace_ind = false,
-  step_duration = 700,
   // TEST,
   math_root,
   // $selected = $(),
@@ -81,9 +80,9 @@ var kek,
   recording = false,
   recording_index = 0,
   manipulation_rec = [],
-  playing = false,
+  playing = false;
   //for multi-equation
-  equations = [];
+  // equations = [];
 
   // var math_str_el;
   // var mathquill;
