Made async qunit tests work properly with redux... Fixed some newfound bugs

--- a/client/main.html
+++ b/client/main.html
@@ -51,14 +51,15 @@
 </div>
 
 <!--testing-->
-<!-- <div class="container-fluid">
+<div class="container-fluid">
   <div id="qunit"></div>
-</div> -->
+</div>
 <!-- <script src="js/next/final/tests.js"></script> -->
 
 <script>
 //GLOBAL VARIABLES
-var step_duration = 700,
+var
+// step_duration = 700,
 // h_eq_shift=0,
   // v_eq_shift=0,
   // equals_position = {left: 0, top: 100},
@@ -68,7 +69,7 @@ var step_duration = 700,
   // var_select = false,
   // replace_ind = false,
   // TEST,
-  math_root,
+  // math_root,
   // $selected = $(),
   // selected_nodes = [],
   // selected_text = "",
