Basic server-side stuff: saving and loading equations, basic user login

--- a/client/main.html
+++ b/client/main.html
@@ -19,74 +19,27 @@
 </head>
 
 <body>
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">AugMath</a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-     <ul class="nav navbar-nav navbar-right">
-      	<li>
-      		<a href="https://github.com/guillefix/augmath">
-      			GitHub
-      		</a>
-      	</li>
-     </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
 
 <!--container-->
-<div class="container-fluid" id="app">
+<div id="app">
 
 </div>
 
 <!--testing-->
-<div class="container-fluid">
+<!-- <div class="container-fluid">
   <div id="qunit"></div>
-</div>
+</div> -->
 <!-- <script src="js/next/final/tests.js"></script> -->
 
 <script>
 //GLOBAL VARIABLES
-var
-// step_duration = 700,
-// h_eq_shift=0,
-  // v_eq_shift=0,
-  // equals_position = {left: 0, top: 100},
-  // manip = "term",
-  // depth = 1,
-  // multi_select = false,
-  // var_select = false,
-  // replace_ind = false,
-  // TEST,
-  // math_root,
-  // $selected = $(),
-  // selected_nodes = [],
-  // selected_text = "",
-  // math_str = [],
-  //for recording
-  // current_index = 0,
-  selected_nodes_id_rec = [],
+var selected_nodes_id_rec = [],
   math_str_rec = [],
   recording = false,
   recording_index = 0,
   manipulation_rec = [],
   playing = false;
-  //for multi-equation
-  // equations = [];
 
-  // var math_str_el;
-  // var mathquill;
 </script>
 
 </body>
