basic matrix support

--- a/client/main.html
+++ b/client/main.html
@@ -29,10 +29,9 @@
 <!-- <div class="container-fluid">
   <div id="qunit"></div>
 </div> -->
-<!-- <script src="js/next/final/tests.js"></script> -->
 
 <script>
-//GLOBAL VARIABLES
+//GLOBAL VARIABLES (legacy...)
 var selected_nodes_id_rec = [],
   math_str_rec = [],
   recording = false,
