new KaTeX version; modified for easier parsing of supsubs

--- a/client/main.html
+++ b/client/main.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="css/katex/katex.min.css">
 	<link rel="stylesheet" href="css/mathquill.css">
   <link rel="stylesheet" href="css/qunit-2.0.0.css">
-  <link rel="stylesheet" href="css/main.css">
+  <!-- <link rel="stylesheet" type="text/css" href="main.css"> -->
   <link rel="stylesheet" href="css/verdict.css">
 
 	 <style type="text/css">
@@ -23,9 +23,5 @@
 
 </div>
 
-<!--testing-->
-<!-- <div class="container-fluid">
-  <div id="qunit"></div>
-</div> -->
 
 </body>
